--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "axios": "^1.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
