--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@tailwindcss/vite": "^4.0.15",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
+    "millify": "^6.1.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-toastify": "^11.0.5",
     "zustand": "^5.0.3"
